--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,11 +3,14 @@
   <head>
     <%= erb(:google_tracking) %>
     <script src="modernizr.js"></script>
+    <script src="jquery-1.7.2.min.js"></script>
+    <script src="slides.js"></script>
     <meta charset="utf-8">
     <title><%= @title %></title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="fonts.css">
     <!-- default grid - expect this to get adjusted for different devices-->
