--- a/views/nav.erb
+++ b/views/nav.erb
@@ -2,6 +2,7 @@
   <ul>
     <li><a <%= "class='active'" if active == 'home' %> href='/'>Home</a></li>
     <li><a <%= "class='active'" if active == 'services' %> href='/services'>Services</a></li>
+    <li><a <%= "class='active'" if active == 'portfolio' %> href='/portfolio'>Work</a></li>
     <li><a <%= "class='active'" if active == 'blog' %> href='http://blog.blazingcloud.net/'>Blog    </a></li>
   </ul>
 </nav>
