--- a/public/responsive/small/320px_to_480px.css
+++ b/public/responsive/small/320px_to_480px.css
@@ -1,6 +1,5 @@
-
 .header nav.cloud ul {
-  width: 170px;
+  width: 225px;
 }
 
 .branding .pitch {
@@ -74,13 +73,26 @@ section .strategy .tile[position="center"] {
   margin-top:22px;
 }
 
+ #slides .slidesNext,#slides .slidesPrevious {
+    position:absolute;
+    top:8%;
+    left:0;
+  }
+  
+   #slides .slidesNext {
+    left:81%;
+  }
+  
+  
+
 footer {
   margin-top: 53px;
 }
+ 
 
 @media screen and (max-width: 450px){  
   .header nav.cloud ul {
-    width: 170px;
+    width: 250px;
   }
   
   .branding {
@@ -117,7 +129,9 @@ footer {
   
   .about .tile {
     width: 80%;
-  }  
+  }
+  
+ 
 }
 
 @media screen and (max-width: 320px) {
@@ -127,7 +141,8 @@ footer {
   }
   
   .header nav.cloud ul {
-    width: 200px;
+    width: 320px;
+    text-align: center;
   }
 
   .home .logo{
@@ -140,7 +155,7 @@ footer {
       margin: auto;
       padding-right: 0;
       position: inherit;
-      width: 201px;
+      width: 245px;
   }
   
   .services nav.cloud {
@@ -197,6 +212,41 @@ footer {
   
   .tile .leader {
     float: none;
+  }
+  
+  body.portfolio .main {
+    padding-left: 8%;
+    padding-right: 3%;
+  }
+  
+  .slidesPagination {
+    left: 35%;
+    position: absolute;
+    top: 20%;
+    width: 100%;
+  }
+  
+   #slides .slidesNext,#slides .slidesPrevious {
+    position:absolute;
+    top:4%;
+    left:0;
+  }
+
+  #slides .slidesNext {
+    left:81%;
+  }
+  
+  #slides img {
+    padding-left: 4.5%;
+    width: 77.5%;
+  }
+  
+  #slides .product {
+    padding: 25% 2% 1% 1%;
+  }
+
+  #slides .ourWork {
+    padding: 10% 2% 1% 4%;
   }
 
   footer {
