--- a/views/services.erb
+++ b/views/services.erb
@@ -1,38 +1,77 @@
 <div class='content'>
-    <div class='services-content'>
-      <section class='main'>
+  <div class='services-content'>
+
+    <section class='main'>
       <article class='introduction '>
-      <em class='title' > Our Services </em>
-      <p>We can create your next mobile application. <a href='mailto:info@blazingcloud.net'>Send us an Email</a></p>
+        <em class='title'> Our Services </em>
+        <p>We can create your next mobile application. 
+          <a href='mailto:info@blazingcloud.net'>Send us an Email</a>
+        </p>
       </article>
       <hr class='underline'/>
-      </section>
-      <section class='services main grid'>
+    </section>
+    
+    <section class='services main grid'>
       <article class='tile'>
-        <img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
+        <img class='leader' 
+             src='images/services/services_strategy_design.png' 
+             alt='illuminating the essense from a maze of ideas'/>
         <em class='title'> Strategy &amp; Design </em>
-        <p>Our multi-disciplinary approach can include design, development and strategy, complementing the resources on your team.</p>
+        <p>Our multi-disciplinary approach can include design, 
+          development and strategy, complementing the resources on your team.</p>
       </article>
       <article class='tile'>
-        <img class='leader' src='images/services/services_mobileapps.png' alt='native mobile applications leverage device strengths'/>
+        <img class='leader' 
+             src='images/services/services_mobileapps.png' 
+             alt='native mobile applications leverage device strengths'/>
         <em class='title'> Mobile Apps</em>
-        <p>Our native app development includes automated testing to increase quality and modern tools for analytics to validate that your application meets your goals.</p>
+        <p>Our native app development includes automated testing to increase 
+          quality and modern tools for analytics to validate that your application meets your goals.</p>
       </article>
       <article class='tile'>
-        <img class='leader' src='images/services/services_mobilewebsites.png' alt='websites are avalible on the mobile device'/>
+        <img class='leader' 
+             src='images/services/services_mobilewebsites.png' 
+             alt='websites are avalible on the mobile device'/>
         <em class='title'> Mobile Websites</em>
         <p>Mobile is expected to surpass desktop web browsing in the next few years.
           We are expert at test-driven development for front-end JavaScript, web apps and web services.</p>
       </article>
       <article class='tile'>
-        <img class='leader' src='images/services/services_convergent_experiences.png' alt='devices become connected through clouds'/>
+        <img class='leader' 
+             src='images/services/services_convergent_experiences.png' 
+             alt='devices become connected through clouds'/>
         <em class='title'> Convergent Experiences </em>
-        <p>Increasingly, products need to work on multiple
-    screens. Our holistic approach to web and
-    mobile solutions makes sure that applications work well
-    together. We can also deliver real-time synchronization across devices.
-    </p>
+        <p>Increasingly, products need to work on multiple screens. 
+           Our holistic approach to web and mobile solutions makes sure that applications work 
+           well together. We can also deliver real-time synchronization across devices.</p>
       </article>
-      </section>
-    </div>
+      <hr class='underline'/>
+    </section>
+    
+    <section class='main'>
+      <article class='clients'>
+        <em class='title'> Our Clients </em>
+        <div class='logos-grid'>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+        </div>
+      </article>
+    </section>
+  </div>
 </div>
