--- a/views/services.erb
+++ b/views/services.erb
@@ -70,6 +70,24 @@
           <div class='tile'>
             <span>Logo</span>
           </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
+          <div class='tile'>
+            <span>Logo</span>
+          </div>
         </div>
       </article>
     </section>
