--- a/views/services.erb
+++ b/views/services.erb
@@ -53,40 +53,40 @@
         <em class='title'> Our Clients </em>
         <div class='logos-grid'>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/CNN.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/Dell.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/AOL.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/McKesson.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/ZigZag.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/JCC.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/TrueCar.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/Scholastic.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/CaptainRecruiter.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/MV.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/Optality.png'>
           </div>
           <div class='tile'>
-            <span>Logo</span>
+            <img src='images/clients_logos/HigherCircle.png'>
           </div>
         </div>
       </article>
