--- a/views/services.erb
+++ b/views/services.erb
@@ -1,17 +1,17 @@
 <div class='content'>
   <div class='services-content'>
 
-    <section class='main'>
+    <section class='main intro'>
       <article class='introduction '>
         <em class='title'> Our Services </em>
         <p>We can create your next mobile application. 
           <a href='mailto:info@blazingcloud.net'>Send us an Email</a>
         </p>
       </article>
-      <hr class='underline'/>
     </section>
     
     <section class='services main grid'>
+      <hr class='underline'/>
       <article class='tile'>
         <img class='leader' 
              src='images/services/services_strategy_design.png' 
@@ -48,7 +48,7 @@
       <hr class='underline'/>
     </section>
     
-    <section class='main'>
+    <section class='main client-logos'>
       <article class='clients'>
         <em class='title'> Our Clients </em>
         <div class='logos-grid'>
@@ -56,7 +56,7 @@
             <img src='images/clients_logos/CNN.png'>
           </div>
           <div class='tile'>
-            <img src='images/clients_logos/Dell.png'>
+            <img src='images/clients_logos/Dell.png', class='circular'>
           </div>
           <div class='tile'>
             <img src='images/clients_logos/AOL.png'>
