--- a/public/responsive/320px_to_767px.css
+++ b/public/responsive/320px_to_767px.css
@@ -2,6 +2,10 @@ body .main {
   padding-left: 4.5%;
   width: 94%;
 }
+
+body.services .main {
+	width: 80%;
+}
   
 #header-wrapper .header a.logo {
   width: 59%;
@@ -51,20 +55,38 @@ nav.cloud {
   margin-bottom: 20px;
 }
 
-.services .tile .leader {
-  margin-bottom: 0;
+.services article.introduction, article.clients em {
+	padding-left: 0px;
 }
 
-.clients .logos-grid {
-	padding: 5px;
+.services .tile .leader {
+  margin-bottom: 0;
 }
 
 .clients .logos-grid .tile {
 	width: 50%;
 	overflow: hidden;
-	float: left;
-	margin: 0px;
+	float: none;
+	height: auto;
+	margin: 0px auto;
 	text-align: center;
+	line-height: 20px;
+	min-width: 0px;
+}
+
+.clients .logos-grid .tile img {
+	margin: 30px 0px;
+	max-width: 100%;
+}
+
+.clients .logos-grid .tile img.circular {
+	margin: 10px 0px;
+}
+
+.clients .logos-grid {
+	width: 70%;
+	margin: 0 auto;
+	padding: 5px;
 }
 
 .underline {
