--- a/public/responsive/wide/768px_to_1024px.css
+++ b/public/responsive/wide/768px_to_1024px.css
@@ -7,9 +7,12 @@ nav.cloud ul {
 }
 
 body.services section.main {
-  left: 0;
-  padding-left: 105px;
   padding-right: 25px;
+	padding-left: 60px;
+}
+
+body.services section.main.intro {
+	padding-left: 110px;
 }
 
 body.services .tile .leader {
@@ -74,8 +77,10 @@ body.services .tile .leader {
   padding-right: 1%;
 }
 
-.grid .tile {
+section.services article.tile {
   margin-right: 1%;
+	padding-left: 20px;
+	padding-right: 10px;
 }
 
 .community .tile[position="right"] {
@@ -88,9 +93,24 @@ body.services .tile .leader {
   margin-top: 18px;
 }
 
-
 .copyright {
   padding: 10px 0;
+}
+
+/* Services Page */
+
+.clients .logos-grid {
+	margin: 50px 0 0;
+	width: 85%;
+}
+
+.clients .logos-grid .tile {
+	width: 50%;
+	text-align: left;
+}
+
+.clients .logos-grid .tile img {
+	padding-left: 40px;
 }
 
 /* Portfolio Page */
@@ -125,10 +145,6 @@ body.portfolio .main {
   left:81%;
 }
 
-.clients .logos-grid .tile {
-	width: 50%;
-}
-
 @media screen and (max-width: 960px) {  
   .branding .mobiles {
     background-size: contain;
@@ -148,18 +164,19 @@ body.portfolio .main {
   #slides .product p {
   height: 500px;
   overflow: hidden;
-}
+	}
   
   #slides .slidesNext,#slides .slidesPrevious {
     position:absolute;
     top:14%;
     left:9%;
     width:24px;
-}
+	}
 
   #slides .slidesNext {
     left:81%;
-  }  
+  }
+ 
   footer {
     min-height: 180px;
   } 
