--- a/public/responsive/wide/768px_to_1024px.css
+++ b/public/responsive/wide/768px_to_1024px.css
@@ -113,6 +113,16 @@ section.services article.tile {
 	padding-left: 40px;
 }
 
+.services .tile .text-wrapper {
+	width: 58%;
+}
+
+.services .tile > .leader {
+	width: 30%;
+  margin-right: 12px;
+	float: left;
+}
+
 /* Portfolio Page */
 body.portfolio .main {
   left: 0;
