--- a/views/services.erb
+++ b/views/services.erb
@@ -16,34 +16,43 @@
         <img class='leader' 
              src='images/services/services_strategy_design.png' 
              alt='illuminating the essense from a maze of ideas'/>
-        <em class='title'> Strategy &amp; Design </em>
-        <p>Our multi-disciplinary approach can include design, 
-          development and strategy, complementing the resources on your team.</p>
+        <div class='text-wrapper'>
+          <em class='title'> Strategy &amp; Design </em>
+          <p>Our multi-disciplinary approach can include design, 
+            development and strategy, complementing the resources on your team.</p>
+        </div>
       </article>
       <article class='tile'>
         <img class='leader' 
              src='images/services/services_mobileapps.png' 
              alt='native mobile applications leverage device strengths'/>
-        <em class='title'> Mobile Apps</em>
-        <p>Our native app development includes automated testing to increase 
-          quality and modern tools for analytics to validate that your application meets your goals.</p>
+        <div class='text-wrapper'>
+          <em class='title'> Mobile Apps</em>
+          <p>Our native app development includes automated testing to increase 
+            quality and modern tools for analytics to validate that your application meets your goals.</p>
+        </div>
       </article>
       <article class='tile'>
         <img class='leader' 
              src='images/services/services_mobilewebsites.png' 
              alt='websites are avalible on the mobile device'/>
-        <em class='title'> Mobile Websites</em>
-        <p>Mobile is expected to surpass desktop web browsing in the next few years.
-          We are expert at test-driven development for front-end JavaScript, web apps and web services.</p>
+        <div class='text-wrapper'>
+          <em class='title'> Mobile Websites</em>
+          <p>Mobile is expected to surpass desktop web browsing in the next few years.
+            We are expert at test-driven development for front-end JavaScript, 
+            web apps and web services.</p>
+        </div>
       </article>
       <article class='tile'>
         <img class='leader' 
              src='images/services/services_convergent_experiences.png' 
              alt='devices become connected through clouds'/>
-        <em class='title'> Convergent Experiences </em>
-        <p>Increasingly, products need to work on multiple screens. 
-           Our holistic approach to web and mobile solutions makes sure that applications work 
-           well together. We can also deliver real-time synchronization across devices.</p>
+        <div class='text-wrapper'>
+          <em class='title'> Convergent Experiences </em>
+          <p>Increasingly, products need to work on multiple screens. 
+             Our holistic approach to web and mobile solutions makes sure that applications work 
+             well together. We can also deliver real-time synchronization across devices.</p>
+        </div>
       </article>
       <hr class='underline'/>
     </section>
