text wrapper witdh changed on 320to480px to 100% since the images dissapear

--- a/public/responsive/small/320px_to_480px.css
+++ b/public/responsive/small/320px_to_480px.css
@@ -87,6 +87,11 @@ section .strategy .tile[position="center"] {
 	display: none;
 }
 
+.services-content .services .text-wrapper {
+	width: 100%;
+	float: none;
+}
+
 .clients .logos-grid {
 	width: 100%;
 }
