--- a/public/responsive/320px_to_767px.css
+++ b/public/responsive/320px_to_767px.css
@@ -276,6 +276,10 @@ footer section.bottom {
     padding: 0;
     display: block;
   }
+
+	.services .tile .text-wrapper {
+		width: 65%;
+	}
   
   #header-wrapper .header a.logo div {
     width: 349px;
