--- a/views/services.erb
+++ b/views/services.erb
@@ -4,9 +4,8 @@
     <section class='main intro'>
       <article class='introduction '>
         <em class='title'> Our Services </em>
-        <p>We can create your next mobile application. 
-          <a href='mailto:info@blazingcloud.net'>Send us an Email</a>
-        </p>
+        <p>We can create your next mobile application.</p>
+        <a href='mailto:info@blazingcloud.net'>Send us an Email</a>
       </article>
     </section>
     
