--- a/public/responsive/320px_to_767px.css
+++ b/public/responsive/320px_to_767px.css
@@ -23,7 +23,7 @@ body.services .main {
 }
 
 nav.cloud {
-  width:45%;
+  width:40%;
   margin:0 auto;
 }
 
@@ -54,7 +54,7 @@ nav.cloud {
   margin-bottom: 20px;
 }
 
-.services article.introduction, article.clients em {
+.services article.introduction {
 	padding-left: 0px;
 }
 
@@ -75,7 +75,7 @@ nav.cloud {
 
 .clients .logos-grid .tile img {
 	margin: 30px 0px;
-	max-width: 60%;
+	max-width: 90%;
 }
 
 .clients .logos-grid .tile img.circular {
