--- a/public/responsive/small/320px_to_480px.css
+++ b/public/responsive/small/320px_to_480px.css
@@ -97,10 +97,16 @@ section .strategy .tile[position="center"] {
 }
 
 footer {
-  margin-top: 53px;
+  margin: 0px;
 }
 
- 
+.introduction p {
+	display: block;
+}
+
+.services article.clients em {
+	padding-left: 15px;
+}
 
 @media screen and (max-width: 450px){  
   .header nav.cloud ul {
@@ -146,7 +152,6 @@ footer {
   .about .tile {
     width: 80%;
   }
- 
 }
 
 @media screen and (max-width: 320px) {
@@ -262,10 +267,6 @@ footer {
 
   #slides .ourWork {
     padding: 10% 2% 1% 4%;
-  }
-
-  footer {
-    margin-top: 100px;
   }
   
   footer section.bottom {
