--- a/public/responsive/768px_or_wider.css
+++ b/public/responsive/768px_or_wider.css
@@ -17,8 +17,7 @@ div#header-wrapper, div.content {
   color:rgb(50,50,50);
 }
 
-
-/* Services  */
+/*    Services    */
 .services div.services-content {
   width: 100%;
   max-width: 1060px;
@@ -56,7 +55,7 @@ section.services article.tile p{
   margin-right: 20px;
 }
 
-/* Home     */
+/*     Home     */
 #header-wrapper .header a.logo div {
   height: 68px;
   background-image: url('/images/logo/with-cloud.png');
@@ -81,6 +80,16 @@ nav.cloud li {
   margin: 0;
 }
 
+@media screen and (min-width: 1420px) {
+	nav.cloud {
+		width: 50%;
+	}
+	
+	nav.cloud ul {
+		width: 370px;
+	}	
+}
+
 @media screen and (min-width: 1000px) {
   .bottom .tile {
     margin: 0;
@@ -96,8 +105,7 @@ nav.cloud li {
 @media screen and (max-width: 960px) {
   #header-wrapper .header a.logo div {
     background-position: 21.6%;
-  }
-  
+  } 
 }
 
 .header, .main, footer section{
@@ -114,7 +122,6 @@ footer {
 }
 
 /* turn off logo on wide as we use brand-cloud-logo */
-
 .underline {
   width: 80%;
   top: 2px;
