Logo cut off on iPad [51014783]

--- a/public/responsive/768px_or_wider.css
+++ b/public/responsive/768px_or_wider.css
@@ -55,6 +55,10 @@ section.services article.tile p{
   margin-right: 20px;
 }
 
+#header-wrapper .header a.logo {
+  width: 50%;
+}
+
 /*     Home     */
 #header-wrapper .header a.logo div {
   height: 68px;
