--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -4,7 +4,7 @@
 </div>
 <div class='branding'>
   <center class='pitch title'> 
-    We handcraft mobile experiences.
+    Bon Voyage! 
   </center>  
   <div class='mobiles'>
   </div>
@@ -14,18 +14,13 @@
     <section class='about'>
     <article class='tile first'>
       <p>
-        <em class='title'>Blazing Cloud</em> 
-        is a design, strategy, and
-        development
-        studio specializing
-        in mobile product development.
+        The <em class='title'>Blazing Cloud</em> 
+        team has joined <em class='title'>Indiegogo</em>.&nbsp;&nbsp;&nbsp;<a style="font-size:1em" href="http://blog.blazingcloud.net/2013/10/15/blazing-go-go/">read more</a>
       </p>
     </article>
     <article class='tile last'>
       <p>
-      <em class='title'>Want to talk about your project?</em>
-      <br/>
-      <a href="mailto:info@blazingcloud.net">Email us.</a>
+      
       </p>
     </article>
     </section> <!-- about section -->
@@ -59,45 +54,6 @@
         </article>
         </section> <!-- services -->
       
-      <hr class='underline'/>
-      <section class='grid community '>
-        <article class='tile' position='left'>
-        <em class='title'>Blazing Cloud Training</em>
-        <img class='leader' src="/images/home/training.png" alt='blazing cloud training'/>
-        <p>
-          Our <a href="http://blazingcloud.eventbrite.com/">innovative classes</a> are geared toward
-          programmers of all levels. We are firm believers in paying it forward.
-          Inquire about our <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEdpay16SEJ0dWF4UUhFYUdvc1NDemc6MA">scholarships</a>.
-          </p>
-          <!--
-          <section class='upcoming'>
-            <em>Upcoming Classes</em>
-            <ol>
-              <li><span class='date'>Mar23</span>
-                <a href="#">CSS for Web Applications</a></li>
-              <li><span class='date'>May21</span>
-                <a href="#">Rails for Beginners</a></li>
-            </ol>
-            </section>   upcoming -->
-        </article>
-        <article class='tile' position='right'>
-          <em class='title'>Talks</em>
-          <img class='leader' src="/images/home/talks.png" alt='blazing cloud talks'/>
-          <p>
-            We are often invited to speak at various events in the bay area and elsewhere.
-            If you'd like to have us speak at your event,
-            <a href="mailto:info@blazingcloud.net">get in touch.</a>
-          </p>
-          <!--
-          <section class='previous'>
-            <em>Previous Talks</em>
-            <ol>
-              <li><span class='date'>Mar23</span>
-                <a href="#">Sarah Allen - Mobile is Everything</a></li>
-            </ol>
-            </section> previous -->
-        </article>
-        </section> <!-- community -->
       </section> <!-- main section -->
 </div>
       <div class='clear'></div>
