Remove debugging text.

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -8,7 +8,7 @@ layout: default
 </div>
 <div class='branding'>
   <center class='pitch title'> 
-    Bon Voyage! qqq
+    Bon Voyage!
   </center>  
   <div class='mobiles'>
   </div>
