--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
   <head>
-    <%= erb(:google_tracking) %>
+    <!--TODO %= erb(:google_tracking) %> -->
     <script src="/public/modernizr.js"></script>
     <script src="/public/jquery-1.7.2.min.js"></script>
     <script src="/public/slides.js"></script>
@@ -69,7 +69,7 @@
         <a class='logo' href='/'>
           <div alt='Blazing Cloud'></div>
         </a>
-        <%= erb :nav, :locals => {:active => @pagename } %>
+        <!--TODO <%= erb :nav, :locals => {:active => @pagename } %>-->
       </div>
     </div>
 
