--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 <!Doctype html>
 <html>
   <head>
-    <!--TODO %= erb(:google_tracking) %> -->
+    {% if jekyll.environment == 'production' %}
+      {% include google_tracking.html %}
+    {% endif %}
     <script src="/public/modernizr.js"></script>
     <script src="/public/jquery-1.7.2.min.js"></script>
     <script src="/public/slides.js"></script>
