Add nav bar back in with active class

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
         <a class='logo' href='/'>
           <div alt='Blazing Cloud'></div>
         </a>
-        <!--TODO <%= erb :nav, :locals => {:active => @pagename } %>-->
+      {% include nav.html %}
       </div>
     </div>
 
