--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
     <![endif]>
   </head>
 
-  <body class="{{ page.title }}">
+  <body class="{{ page.pagename }}">
     <div id='header-wrapper'>
       <div class='header'>
         <a class='logo' href='/'>
