Put title back.

--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -4,6 +4,13 @@ layout: default
 
 <div class='content'>
   <div class='services-content'>
+
+    <section class='main intro'>
+      <article class='introduction '>
+        <em class='title'> Our Services </em>
+      </article>
+    </section>
+    
     <section class='services main grid'>
       <article class='tile'>
         <img class='leader' 
