Portfolio and Slides were a WIP. Activating to play around on staging.

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <div class='content'>
     <div class='portfolio-content'>
 	<section class='main'>
@@ -12,7 +16,7 @@
 	  
 	    <div id="slides">
 	      <div>
-		  	<img src="images/portfolio/cnn.png" alt="Slide 1">
+		  	<img src="public/images/portfolio/cnn.png" alt="Slide 1">
 		  	<div class="product"><em class='title'> CNN </em>
 				<h3>Overview</h3>
 		  		<p>In partnership with Orange Design and CNN, Blazing Cloud developed an interactive
@@ -36,7 +40,7 @@
 	      </div>
 	  
 	      <div>
-		  	<img src="images/portfolio/foto_zap.png" alt="Slide 2">
+		  	<img src="public/images/portfolio/foto_zap.png" alt="Slide 2">
 		  	<div class="product">
 		  		<em class='title'> FotoZap </em>
 				<h3>Overview</h3>
@@ -64,7 +68,7 @@
 	      </div>
 	  
 	       <div>
-		  	<img src="images/portfolio/gaze.png" alt="Slide 3">
+		  	<img src="public/images/portfolio/gaze.png" alt="Slide 3">
 		  	<div class="product"><em class='title'> Gaze </em>
 				<h3>Overview</h3>
 		  		<p>Gaze is a selection of scenes designed for relaxation, contemplation or just a 
@@ -88,7 +92,7 @@
 	       </div>
 	      
 	       <div>
-		  	<img src="images/portfolio/mighty_verse.png" alt="Slide 4">
+		  	<img src="public/images/portfolio/mighty_verse.png" alt="Slide 4">
 		  	<div class="product"><em class='title'> Mighty Verse </em>
 				<h3>Overview</h3>
 		  		<p>Mightyverse is for people interested in travel, language and connecting with people
@@ -111,7 +115,7 @@
 	      </div>
 	      
 	       <div>
-		  	<img src="images/portfolio/scholastic.png" alt="Slide 5">
+		  	<img src="public/images/portfolio/scholastic.png" alt="Slide 5">
 		  	<div class="product"><em class='title'> SCHOLATIC </em>
 				<h3>Overview</h3>
 		  		<p>Blazing Cloud provided iOS development expertise in a partnership with Orange Design to create three titles for the 
@@ -134,7 +138,7 @@
 	      </div>
 	      
 	       <div>
-		  	<img src="images/portfolio/zig_zag.png" alt="Slide 6">
+		  	<img src="public/images/portfolio/zig_zag.png" alt="Slide 6">
 		  	<div class="product"><em class='title'> Zig Zag Board </em>
 				<h3>Overview</h3>
 		  		<p>ZigZag Board for the iPad makes it easy to visualize and share your ideas. 
